# Comparative-Transcriptomics-Dashboard

./: .gitignore  README.md  SETUP.md  environment.yml  pyproject.toml  requirements.txt
examples/: README.md  generate_example_data.py  ground_truth.csv  sample_counts.csv  sample_counts.tsv  sample_counts.xlsx  sample_metadata.csv  sample_metadata.tsv  sample_metadata.xlsx
examples/minimal/: ground_truth.csv  sample_counts.csv  sample_counts.tsv  sample_counts.xlsx  sample_metadata.csv  sample_metadata.tsv  sample_metadata.xlsx
src/transcriptomics_dashboard/: __init__.py  app.py  config.py  deseq2.py  validation.py  visualizations.py
tests/: test_validation.py
